--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,274 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    background-color: whitesmoke;
+}
+
+.main {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.my-videos {
+    position: relative;
+    width: 100%;
+    height: fit-content;
+    margin-top: 70px;
+}
+
+
+/* .item {
+    background: green!important;
+} */
+
+.all-items {
+    position: relative;
+    width: 100%;
+    background-color: white;
+    margin-bottom: 10px;
+    /* top: 49px; */
+}
+
+.recommendations {
+    position: relative;
+    height: fit-content;
+    padding: 16px;
+    width: 100%;
+}
+
+.my-item,
+.recommendations-item {
+    position: relative;
+    width: 100%;
+    height: 150px;
+    background-size: 100% 100%;
+    cursor: pointer;
+}
+
+.my-item {
+    height: 200px;
+}
+
+.fnt-sm li {
+    font-size: 0.8rem;
+}
+
+.video-title {
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: #000000c4;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.txt-grey {
+    color: grey;
+}
+
+.skills {
+    position: relative;
+    margin: 15px;
+    /* top: 40px; */
+}
+
+.skill-list li {
+    margin: 0px 10px 10px 10px;
+    background-color: #e7e9ec;
+    border-radius: 5px;
+    padding: 5px;
+    color: black
+}
+
+.footer {
+    position: relative;
+    background-color: white;
+    /* margin-top: 79px; */
+    padding: 65px;
+    color: gray;
+    top: 40px;
+}
+
+.info {
+    position: relative;
+    width: 100%;
+}
+
+.info li {
+    list-style-type: none;
+    text-align: left;
+}
+
+.info li a {
+    color: gray;
+}
+
+.btn-gray {
+    background-color: #797f7f;
+    color: white;
+    font-weight: 100;
+}
+
+.info .mobile-item a {
+    color: white;
+    font-weight: 100;
+    font-size: 1rem;
+}
+
+.info .mobile-item {
+    color: white
+}
+
+.logo {
+    width: 24px;
+}
+
+.bg-white {
+    background-color: white
+}
+
+.play-background {
+    position: absolute;
+    background-color: white;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    align-content: center;
+    text-align: center;
+    opacity: 0.3;
+    overflow: hidden;
+    max-height: 500px;
+    transition-property: all;
+    transition-duration: .7s;
+    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+    cursor: pointer;
+}
+
+.play-background img {
+    position: relative;
+    /* width: 30%; */
+    height: 100%;
+    /* margin: 0 auto; */
+    /* left: 20%; */
+    /* right: 35%; */
+}
+
+.play-item:hover .play-background {
+    max-height: 0px;
+}
+
+.video-content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.search-bar {
+    width: 88% !important;
+}
+
+.w-80 {
+    width: 86% !important;
+    justify-content: center;
+}
+
+.options {
+    position: relative;
+    width: 100%;
+    padding: .2rem .3rem;
+}
+
+.options ul li {
+    padding: .3rem;
+}
+
+.btn-rounded {
+    border-radius: 40px !important;
+    width: 37px !important;
+    height: 37px !important;
+}
+
+.b-shadow {
+    box-shadow: 0px -1px 0.5px 0px black;
+}
+
+.btn-outline-primary:hover {
+    color: white !important;
+}
+
+.navbar-brand {
+    font-family: 'Pacifico', cursive !important;
+}
+
+.dropdown-menu {
+    left: -45px !important;
+}
+
+.g-shadow {
+    box-shadow: 0px 0px 11.5px 0px grey;
+}
+
+.dp-user {
+    left: -130px !important;
+}
+
+.dp-bell {
+    left: -143px !important;
+}
+
+.dp-stream {
+    left: -100px !important;
+}
+
+.notification {
+    position: absolute !important;
+    top: 11px !important;
+    left: 22px !important;
+    border-radius: 40px !important;
+}
+
+.btn-gray:hover,
+.btn-gray:hover a {
+    color: white;
+}
+
+.btn-outline-gray {
+    border-color: gray;
+    color: gray;
+    font-size: 1.25rem;
+}
+
+.btn-outline-gray:hover {
+    background: gray;
+    color: white;
+}
+
+.pull-right {
+    float: right !important;
+}
+
+.dropdownMenu {
+    background: #000000c4;
+    position: absolute;
+}
+
+nav {
+    padding: 0 10px !important;
+}
+
+.fnt-1 {
+    font-size: 1rem;
+}
+
+.video-dashboard{
+    position: relative;
+     background-color: white;
+     box-shadow: grey 0px 0px 0.1px 0px;
+     height: fit-content;
+     margin: 0 auto;
+     padding: 35px
+}
+
+.bg-green{
+    background-color: green
 }
