--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,12 +3,14 @@ body {
     padding: 0;
     font-family: 'Roboto', sans-serif;
     background-color: whitesmoke;
+   
 }
 
 .main {
     position: relative;
     width: 100%;
     height: 100%;
+     overflow: hidden;
 }
 
 .my-videos {
@@ -68,21 +70,22 @@ body {
 }
 
 .txt-grey {
-    color: grey;
+  color: #797f7f;
 }
 
-.skills {
+.skills{
     position: relative;
     margin: 15px;
     /* top: 40px; */
+    color: #797f7f
 }
 
 .skill-list li {
-    margin: 0px 10px 10px 10px;
-    background-color: #e7e9ec;
-    border-radius: 5px;
-    padding: 5px;
-    color: black
+   margin: 0px 10px 10px 10px;
+   background-color: #65afff;
+   border-radius: 5px;
+   padding: 5px;
+   color: white;
 }
 
 .footer {
@@ -91,7 +94,8 @@ body {
     /* margin-top: 79px; */
     padding: 65px;
     color: gray;
-    top: 40px;
+    margin-top: 40px;
+    bottom: 0;
 }
 
 .info {
@@ -303,9 +307,11 @@ nav {
 }
 
 .iframe {
-    width: 100%;
-    height: 100%;
-    margin: 5px;
+   width: 100%;
+   height: 100%;
+   margin: 5px;
+   left: -5px;
+   position: relative;
 }
 
 .grid-container {
@@ -328,11 +334,24 @@ nav {
 margin-top: 55px;
 position: relative;
 width: 100%;
-background-color: green;
 height: fit-content;
+
 }
 
 .video-wrapper{
-
+  position: relative;
+  width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  background-color: white;
 }
-
+.video-wrapper > div {
+    height:  500px;
+}
+.card-item{
+background: white;
+padding: 5px;
+border-radius: 5px;
+box-shadow: 0px 0px 10px 0px grey;
+}
