fixed fonts and nav-brand

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -215,7 +215,8 @@ body {
 }
 
 .navbar-brand {
-    font-family: 'Pacifico', cursive !important;
+/*     font-family: 'Pacifico', cursive !important;
+ */    font-family: 'Wallpoet', cursive !important;
 }
 
 .dropdown-menu {
